[project]
name = "kortecx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "JayReddy", email = "kortecxhelp@gmail.com" }
]
requires-python = ">=3.10.16"
dependencies = [
    "click>=8.1.8",
    "duckdb>=1.2.1",
    "fastapi>=0.115.12",
    "langchain>=0.3.23",
    "langchain-community>=0.3.21",
    "mcp[cli]>=1.6.0",
    "pandas>=2.2.3",
    "pydantic>=2.11.2",
    "torch>=2.6.0",
    "transformers>=4.51.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
kx = "kortecx.cli.cli:kx"