[project]
name = "kortecx"
version = "0.1.0"
description = "Artificial brain for AI Agents"
readme = "README.md"
authors = [
    { name = "JayReddy", email = "kortecxhelp@gmail.com" }
]
keywords = ["kortecx", "ai","agents", "automation"]
requires-python = ">=3.10.16"
dependencies = [
    "click>=8.1.8",
    "duckdb>=1.2.1",
    "fastapi>=0.115.12",
    "langchain>=0.3.23",
    "langchain-community>=0.3.21",
    "mcp[cli]>=1.6.0",
    "pandas>=2.2.3",
    "pydantic>=2.11.2",
    "torch>=2.6.0",
    "transformers>=4.51.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[project.scripts]
kx = "kortecx.cli.cli:kx"

[project.urls]
Homepage = "https://kortecx.com"
Repository = "https://github.com/Kortecx/kortecx"
Issues = "https://github.com/Kortecx/kortecx/issues"

[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
bump = true

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = []

[tool.ruff]
line-length = 88
target-version = "py310"