[project]
name = "kortecx-engine"
version = "0.1.0"
description = "Kortecx AI/ML engine — data engineering, model training, inference, and orchestration"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "websockets>=14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",

    # ── Database & Data ───────────────────────────────────
    "duckdb>=1.2.0",
    "psycopg[binary]>=3.2.0",
    "sqlalchemy>=2.0.0",

    # ── Vector Store ──────────────────────────────────────
    "qdrant-client>=1.13.0",

    # ── ML / AI ───────────────────────────────────────────
    "torch>=2.5.0",
    "transformers>=4.48.0",
    "datasets>=3.3.0",
    "accelerate>=1.3.0",
    "peft>=0.14.0",
    "trl>=0.15.0",
    "unsloth>=2025.3.0",

    # ── Spark ─────────────────────────────────────────────
    "pyspark>=3.5.0",

    # ── Orchestration ─────────────────────────────────────
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-huggingface>=0.1.0",

    # ── HuggingFace Hub ───────────────────────────────────
    "huggingface-hub>=0.28.0",

    # ── HTTP Client (for local inference backends) ──────
    "httpx>=0.27.0",

    # ── Async PostgreSQL (for Quorum engine) ──────────
    "asyncpg>=0.30.0",

    # ── System Metrics ────────────────────────────────
    "psutil>=6.0.0",

    # ── File uploads ────────────────────────────────────
    "python-multipart>=0.0.9",

    # ── Experiment Tracking ────────────────────────────
    "mlflow>=2.18.0",
]

[project.scripts]
engine = "engine.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/engine"]

[tool.uv.workspace]
members = []

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 170

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["N815"]  # camelCase in Pydantic models — intentional for JSON API compatibility
