# cargo-fuzz harness for the untrusted-byte parse paths (risk-burndown Batch B).
# A STANDALONE workspace (the `[workspace]` table detaches it from the runtime workspace) so the fuzz
# tooling never affects a normal `cargo build`. Run: `cargo +nightly fuzz run <target>`.
[package]
name = "kortecx-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
# The FFI-free, fail-closed byte parsers that accept UNTRUSTED input. Each is documented panic-free over
# arbitrary bytes; the fuzzer asserts that (a panic / OOM / hang is the finding).
kx-planner = { path = "../crates/kx-planner" }
kx-journal = { path = "../crates/kx-journal" }
kx-projection = { path = "../crates/kx-projection" }
# The tool-call authority gate + the types to build a non-empty warrant fixture (an empty warrant
# short-circuits the parser). serde_json rebuilds the canonical envelope for the round-trip fixpoint.
kx-toolcall = { path = "../crates/kx-toolcall" }
kx-warrant = { path = "../crates/kx-warrant" }
kx-mote = { path = "../crates/kx-mote" }
serde_json = "1"

[[bin]]
name = "decode_plan"
path = "fuzz_targets/decode_plan.rs"
test = false
doc = false
bench = false

[[bin]]
name = "decode_entry"
path = "fuzz_targets/decode_entry.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fold_checkpoint"
path = "fuzz_targets/fold_checkpoint.rs"
test = false
doc = false
bench = false

[[bin]]
name = "parse_tool_call"
path = "fuzz_targets/parse_tool_call.rs"
test = false
doc = false
bench = false

# Detach from the parent (runtime) workspace — cargo-fuzz convention.
[workspace]
