[package]
name         = "kx-journal"
version      = "0.0.1"
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
authors      = { workspace = true }
repository   = { workspace = true }
description  = "kortecx journal — the spine: append-only log of committed facts; single-writer-per-run; atomic stage→commit txns."

[lib]
path = "src/lib.rs"

[dependencies]
bincode    = { workspace = true }
blake3     = { workspace = true }
kx-content = { workspace = true }
kx-mote    = { workspace = true }
rusqlite   = { workspace = true }
serde      = { workspace = true }
smallvec   = { workspace = true }
thiserror  = { workspace = true }
tracing    = { workspace = true }

[dev-dependencies]
tempfile           = { workspace = true }
tracing-subscriber = { workspace = true }
proptest           = { workspace = true }

[lints]
workspace = true
