[package]
name         = "kx-model-validator"
version      = "0.0.1"
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
authors      = { workspace = true }
repository   = { workspace = true }
description  = "kortecx model-validator (D29) — static bind-time type check on capability sets. Refuses model–task mismatches before the first token."

[lib]
path = "src/lib.rs"

[dependencies]
kx-mote   = { workspace = true }
serde     = { workspace = true }
thiserror = { workspace = true }
tracing   = { workspace = true }

[dev-dependencies]
proptest           = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
