[package]
name         = "kx-mote"
version      = "0.0.1"
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
authors      = { workspace = true }
repository   = { workspace = true }
description  = "kortecx Mote — the atomic execution unit (P1.2 will fill this in)."

[lib]
path = "src/lib.rs"

[dependencies]
# Real dependencies (blake3, smallvec, serde, bincode, thiserror) land at P1.2
# when the Mote type, lifecycle, idempotency identity, and ND-tag are implemented.

[dev-dependencies]
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
