[package]
name         = "kx-projection"
version      = "0.0.1"
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
authors      = { workspace = true }
repository   = { workspace = true }
description  = "kortecx projection — the read-side fold of the journal log; serves ready_set, parents/children, transitive_consumers, promotion_state."

[lib]
path = "src/lib.rs"

[dependencies]
kx-content = { workspace = true }
kx-journal = { workspace = true }
kx-mote    = { workspace = true }
smallvec   = { workspace = true }
thiserror  = { workspace = true }
tracing    = { workspace = true }

[dev-dependencies]
tempfile           = { workspace = true }
tracing-subscriber = { workspace = true }
