[package]
name         = "kx-warrant"
version      = "0.0.1"
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
authors      = { workspace = true }
repository   = { workspace = true }
description  = "kortecx capability layer (D30) — Warrant + Role + monotonic narrowing. Pure intersection function refuses widening on any axis. WarrantSpec is content-addressed."

[lib]
path = "src/lib.rs"

[dependencies]
kx-mote    = { workspace = true }
kx-content = { workspace = true }
bincode    = { workspace = true }
blake3     = { workspace = true }
serde      = { workspace = true }
smallvec   = { workspace = true }
thiserror  = { workspace = true }
tracing    = { workspace = true }

[dev-dependencies]
proptest           = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
